# gaspar

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_requirements.sh
src/streamer/: base.py
src/streamer/kitti/: streamer.py
tests/: test_kitty.py
